testing/tests/ui/match_with_extra.stderr
error: the previous template error derives from
 --> tests/ui/match_with_extra.rs:6:5
  |
6 |     source = r#"
  |     ^^^^^^
